[gd_scene format=3 uid="uid://c1j8eo64013gj"]

[ext_resource type="Script" uid="uid://r8pu325cmfmw" path="res://UI/components/endgame/script_endgame.gd" id="1_62ppp"]
[ext_resource type="Texture2D" uid="uid://4iqnewjmoue0" path="res://UI/Assets/Art/bear.jpg" id="2_tkg3f"]
[ext_resource type="Texture2D" uid="uid://d0gu5qp5ed0d2" path="res://UI/Assets/Art/jail_bars.png" id="3_62ppp"]

[node name="Endgame" type="Control" unique_id=1164739181]
top_level = true
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_62ppp")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1390381345]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5370987, 0.5370987, 0.5370987, 0.5)

[node name="Sure" type="PanelContainer" parent="." unique_id=1025527174]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.5
offset_top = -29.0
offset_right = 215.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Sure" unique_id=417985598]
layout_mode = 2

[node name="Sure" type="Label" parent="Sure/VBoxContainer" unique_id=2101917666]
layout_mode = 2
text = "Are you sure you want to unmask [name] as the culprit?"

[node name="HBoxContainer" type="HBoxContainer" parent="Sure/VBoxContainer" unique_id=2094428787]
layout_mode = 2
alignment = 1

[node name="Yes" type="Button" parent="Sure/VBoxContainer/HBoxContainer" unique_id=286084239 groups=["buttons"]]
layout_mode = 2
text = "Yes!"

[node name="No" type="Button" parent="Sure/VBoxContainer/HBoxContainer" unique_id=979759913 groups=["buttons"]]
layout_mode = 2
text = "Maybe not..."

[node name="Result" type="Control" parent="." unique_id=872404654]
visible = false
anchors_preset = 0
offset_left = 917.0
offset_top = 522.0
offset_right = 917.0
offset_bottom = 522.0

[node name="ColorRect2" type="ColorRect" parent="Result" unique_id=1940160150]
layout_mode = 0
offset_left = -911.0
offset_top = -519.0
offset_right = 998.0
offset_bottom = 557.0
color = Color(0, 0, 0, 1)

[node name="ColorRect" type="ColorRect" parent="Result" unique_id=2001642479]
layout_mode = 1
offset_left = -699.0
offset_top = -288.0
offset_right = 201.0
offset_bottom = 312.0

[node name="HeroName" type="Label" parent="Result" unique_id=891936406]
layout_mode = 0
offset_left = -327.0
offset_top = -328.0
offset_right = -163.0
offset_bottom = -301.0
text = "The Guilty Hero"
horizontal_alignment = 1

[node name="Hero" type="TextureRect" parent="Result" unique_id=1577980659]
layout_mode = 0
offset_left = -496.0
offset_top = -215.0
offset_right = 4.0
offset_bottom = 285.0
texture = ExtResource("2_tkg3f")

[node name="JailBars" type="TextureRect" parent="Result" unique_id=1472278123]
visible = false
layout_mode = 0
offset_left = -697.0
offset_top = -288.0
offset_right = 203.0
offset_bottom = 312.0
texture = ExtResource("3_62ppp")

[node name="Congrats" type="PanelContainer" parent="Result" unique_id=1506799073]
visible = false
layout_mode = 1
offset_left = 371.0
offset_top = -72.0
offset_right = 616.0
offset_bottom = 5.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Result/Congrats" unique_id=544495995]
layout_mode = 2

[node name="Label" type="Label" parent="Result/Congrats/VBoxContainer2" unique_id=2041009432]
layout_mode = 2
text = "You found my wallet!"

[node name="Label2" type="Label" parent="Result/Congrats/VBoxContainer2" unique_id=1075105238]
layout_mode = 2
text = "Thanks, Detective! "

[node name="Label3" type="Label" parent="Result/Congrats/VBoxContainer2" unique_id=1491715989]
layout_mode = 2
text = "You have unmasked the culprit!"

[node name="Fail" type="PanelContainer" parent="Result" unique_id=1254117215]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 397.0
offset_top = -57.0
offset_right = 677.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Result/Fail" unique_id=621798994]
layout_mode = 2

[node name="Label" type="Label" parent="Result/Fail/VBoxContainer" unique_id=867585424]
layout_mode = 2
text = "Where's my wallet?!"

[node name="Label2" type="Label" parent="Result/Fail/VBoxContainer" unique_id=1631828422]
layout_mode = 2
text = "Too bad, Detective."

[node name="Label3" type="Label" parent="Result/Fail/VBoxContainer" unique_id=370313384]
layout_mode = 2
text = "You got the wrong hero."

[connection signal="pressed" from="Sure/VBoxContainer/HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Sure/VBoxContainer/HBoxContainer/No" to="." method="_on_no_pressed"]
